Add experiences section and enhance About, Hero, and Projects
Introduced a new ExperiencesSection component to showcase work history and updated the About section with detailed skills and tools, including icons. Improved the Hero section's title and content, added the experiences link to navigation, and refactored Projects to use a more concise, data-driven approach. Also made various style and formatting improvements across components and updated global styles for consistency. Added new asset images for experiences.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,71 +1,67 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @theme {
-  --color-transparent: transparent;
+    --color-transparent: transparent;
 
-  --color-primary-200: #262626;
-  --color-primary-300: #4d4d4d;
-  --color-primary-400: #666666;
+    --color-primary-200: #262626;
+    --color-primary-300: #4d4d4d;
+    --color-primary-400: #666666;
 
-  --color-secondary-100: #0e0e0c;
-  --color-secondary-200: #262626;
-  --color-secondary-300: #4d4d4d;
-  --color-secondary-400: #666666;
-  --color-secondary-500: #8c8c73;
-  --color-secondary-600: #aeae9d;
-  --color-secondary-700: #d1d1c7;
+    --color-secondary-100: #0e0e0c;
+    --color-secondary-200: #262626;
+    --color-secondary-300: #4d4d4d;
+    --color-secondary-400: #666666;
+    --color-secondary-500: #8c8c73;
+    --color-secondary-600: #aeae9d;
+    --color-secondary-700: #d1d1c7;
 
-  --color-accent-100: #fafaf9;
-  --color-accent-200: #d9d9d9;
-  --color-accent-300: #e6e6e6;
-  --color-accent-400: #f2f2f2;
+    --color-accent-100: #fafaf9;
+    --color-accent-200: #d9d9d9;
+    --color-accent-300: #e6e6e6;
+    --color-accent-400: #f2f2f2;
 
-  --font-overused: "OverusedGrotesk", "sans-serif";
-  --font-satoshi: "Satoshi", "sans-serif";
+    --font-overused: 'OverusedGrotesk', 'sans-serif';
+    --font-satoshi: 'Satoshi', 'sans-serif';
 }
 
 @layer base {
-  html {
-    @apply scroll-smooth;
-  }
+    html {
+        @apply scroll-smooth;
+    }
 
-  body {
-    @apply mx-auto w-full bg-primary-200 text-white;
-  }
+    body {
+        @apply mx-auto w-full bg-primary-200 text-white;
+    }
 }
 
 @font-face {
-  font-family: "OverusedGrotesk";
-  src: url("/fonts/overused-grotesk/OverusedGrotesk-Medium.ttf")
-    format("truetype");
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'OverusedGrotesk';
+    src: url('/fonts/overused-grotesk/OverusedGrotesk-Medium.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-  font-family: "OverusedGrotesk";
-  src: url("/fonts/overused-grotesk/OverusedGrotesk-Bold.ttf")
-    format("truetype");
-  font-weight: bold;
-  font-style: normal;
+    font-family: 'OverusedGrotesk';
+    src: url('/fonts/overused-grotesk/OverusedGrotesk-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
 }
 
 @font-face {
-  font-family: "OverusedGrotesk";
-  src: url("/fonts/overused-grotesk/OverusedGrotesk-SemiBold.ttf")
-    format("truetype");
-  font-weight: 400;
+    font-family: 'OverusedGrotesk';
+    src: url('/fonts/overused-grotesk/OverusedGrotesk-SemiBold.ttf') format('truetype');
+    font-weight: 400;
 }
 
 @font-face {
-  font-family: "OverusedGrotesk";
-  src: url("/fonts/overused-grotesk/OverusedGrotesk-Light.ttf")
-    format("truetype");
-  font-weight: lighter;
-  font-style: normal;
+    font-family: 'OverusedGrotesk';
+    src: url('/fonts/overused-grotesk/OverusedGrotesk-Light.ttf') format('truetype');
+    font-weight: lighter;
+    font-style: normal;
 }
 
 @font-face {
-  font-family: "Satoshi";
-  src: url("/fonts/Satoshi_Complete/TTF/Satoshi-Variable.ttf");
+    font-family: 'Satoshi';
+    src: url('/fonts/Satoshi_Complete/TTF/Satoshi-Variable.ttf');
 }
